# cookiecutter-uv

./: 404.html  index.html  sitemap.xml
features/cicd/: index.html
features/codecov/: index.html
features/devcontainer/: index.html
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
features/uv/: index.html
prompt_arguments/: index.html
search/: search_index.json
tutorial/: index.html
{{cookiecutter.project_name}}/: pyproject.toml
